--- a/nsfabrice2009/config/roles/ansible_role_rke2/handlers/main.yml
+++ b/nsfabrice2009/config/roles/ansible_role_rke2/handlers/main.yml
@@ -1,22 +1,22 @@
 ---
 
-- name: Redémarrer keepalived
+- name: Restart keepalived
   ansible.builtin.service:
     name: keepalived
     state: restarted
 
-- name: Redémarrer systemd-sysctl
+- name: Restart systemd-sysctl
   ansible.builtin.service:
     state: restarted
     name: systemd-sysctl
 
-- name: Vider les gestionnaires
+- name: Flush handlers
   ansible.builtin.meta: flush_handlers
 
-- name: Fichier de configuration modifié
+- name: Config file changed
   ansible.builtin.set_fact:
     rke2_restart_needed: true
 
-- name: Service (re)démarré
+- name: Service (re)started
   ansible.builtin.set_fact:
     rke2_restart_needed: false
